# scoped-futures

./: .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md
src/: lib.rs
