[package]
name = "scoped-futures"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sidechainme/scoped-futures"
homepage = "https://github.com/sidechainme/scoped-futures"
description = """
A utility crate for imposing upper bounds on Future lifetimes.
"""
categories = ["asynchronous"]
keywords = ["scope", "future", "futures", "hrtb", "liftime"]
include = ["**/*.rs", "Cargo.toml", "LICENSE-*"]

[dependencies]
cfg-if = "1.0.0"
pin-utils = "0.1.0"

[dev-dependencies]
futures = { version = "0.3.25", default-features = false, features = ["executor"] }

[features]
std = []
