[package]
name = "scoped-futures"
version = "0.1.4"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tlowerison/scoped-futures"
homepage = "https://github.com/tlowerison/scoped-futures"
description = """
A utility crate for imposing upper bounds on Future lifetimes.
"""
categories = ["asynchronous"]
keywords = ["scope", "future", "futures", "hrtb", "liftime"]
include = ["**/*.rs", "Cargo.toml", "LICENSE-*"]

[dependencies]
pin-project-lite = "0.2"

[dev-dependencies]
futures = { version = "0.3", default-features = false, features = ["executor"] }

[features]
default = ["std"]
std = ["alloc"]
alloc = []
